data and visualizations updated 2020-03-23

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -50,12 +50,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Importan: **Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages. See the visualizations below.** "
+    "> Important: **Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages. See the visualizations below.** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "22  2020-03-23      ie   1125       6          5             19"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,17 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-455b2bb70e654bd6847e4d889b0fabb6\"></div>\n",
+       "<div id=\"altair-viz-dacd337648ff444e8949d94eac671238\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-455b2bb70e654bd6847e4d889b0fabb6\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-dacd337648ff444e8949d94eac671238\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -385,7 +385,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,17 +408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-411e9527fc1c44a2901dca87872caed2\"></div>\n",
+       "<div id=\"altair-viz-8f9964b4d25b4f2cb3fac0f49aabeda5\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-411e9527fc1c44a2901dca87872caed2\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-8f9964b4d25b4f2cb3fac0f49aabeda5\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -466,7 +466,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,17 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8de7f71057bd4e019719c8b427b3584c\"></div>\n",
+       "<div id=\"altair-viz-50ff755143f14dcb99a54420ed979460\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-8de7f71057bd4e019719c8b427b3584c\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-50ff755143f14dcb99a54420ed979460\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -554,7 +554,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-696091f306ec4480be2c99dc4f2f1526\"></div>\n",
+       "<div id=\"altair-viz-81767131489b4d66a99b80a8bc6ee490\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-696091f306ec4480be2c99dc4f2f1526\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-81767131489b4d66a99b80a8bc6ee490\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -652,7 +652,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,22 +679,22 @@
     "\n",
     "If we plot a figure dividing the total number of cases reported daily by the population (in millions) we can find how many persons are infected per 1 million, which give us a normalized value we could use to understand the severity of the outbreak.\n",
     "\n",
-    "### The figure below shows that in fact Ireland has more cases per million that the most affected countries in Europe starting on March 16th, 2020, and growing quickly."
+    "### The figure below shows that in fact Ireland has more cases per million than the most affected countries in Europe starting on March 16th, 2020, and growing quickly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e4b03b14727742d7bfa0be40e541d58d\"></div>\n",
+       "<div id=\"altair-viz-54a1ab63322a444582f601702775afa8\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-e4b03b14727742d7bfa0be40e541d58d\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-54a1ab63322a444582f601702775afa8\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -742,7 +742,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,17 +765,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-5ab52425fba844abaab8cd411b8e74e8\"></div>\n",
+       "<div id=\"altair-viz-e51fb6f186ab4e12bc1b38265ef78068\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-5ab52425fba844abaab8cd411b8e74e8\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-e51fb6f186ab4e12bc1b38265ef78068\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -823,7 +823,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,17 +851,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4490fd61598d43f7b7da96b377283fd5\"></div>\n",
+       "<div id=\"altair-viz-4d173df777be4eb4a6d7761f66147248\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-4490fd61598d43f7b7da96b377283fd5\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-4d173df777be4eb4a6d7761f66147248\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -909,7 +909,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,17 +937,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-7f5e4c53c0ec4383a110908a91103a3c\"></div>\n",
+       "<div id=\"altair-viz-71ac4d488cb348189d84290f7e32b4ff\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-7f5e4c53c0ec4383a110908a91103a3c\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-71ac4d488cb348189d84290f7e32b4ff\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -995,7 +995,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
