--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -61,8 +61,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<blockquote><p>Importan: <strong>Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages. See the visualizations below.</strong></p>
-</blockquote>
+<p>{% include important.html content='<strong>Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages. See the visualizations below.</strong> ' %}</p>
 
 </div>
 </div>
@@ -88,10 +87,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-696091f306ec4480be2c99dc4f2f1526"></div>
+<div id="altair-viz-81767131489b4d66a99b80a8bc6ee490"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-696091f306ec4480be2c99dc4f2f1526");
+    const outputDiv = document.getElementById("altair-viz-81767131489b4d66a99b80a8bc6ee490");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -153,7 +152,7 @@ layout: notebook
 <li><strong>Spain</strong> : 47.1M</li>
 </ul>
 <p>If we plot a figure dividing the total number of cases reported daily by the population (in millions) we can find how many persons are infected per 1 million, which give us a normalized value we could use to understand the severity of the outbreak.</p>
-<h3 id="The-figure-below-shows-that-in-fact-Ireland-has-more-cases-per-million-that-the-most-affected-countries-in-Europe-starting-on-March-16th,-2020,-and-growing-quickly.">The figure below shows that in fact Ireland has more cases per million that the most affected countries in Europe starting on March 16th, 2020, and growing quickly.<a class="anchor-link" href="#The-figure-below-shows-that-in-fact-Ireland-has-more-cases-per-million-that-the-most-affected-countries-in-Europe-starting-on-March-16th,-2020,-and-growing-quickly."> </a></h3>
+<h3 id="The-figure-below-shows-that-in-fact-Ireland-has-more-cases-per-million-than-the-most-affected-countries-in-Europe-starting-on-March-16th,-2020,-and-growing-quickly.">The figure below shows that in fact Ireland has more cases per million than the most affected countries in Europe starting on March 16th, 2020, and growing quickly.<a class="anchor-link" href="#The-figure-below-shows-that-in-fact-Ireland-has-more-cases-per-million-than-the-most-affected-countries-in-Europe-starting-on-March-16th,-2020,-and-growing-quickly."> </a></h3>
 </div>
 </div>
 </div>
@@ -169,10 +168,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-7f5e4c53c0ec4383a110908a91103a3c"></div>
+<div id="altair-viz-71ac4d488cb348189d84290f7e32b4ff"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-7f5e4c53c0ec4383a110908a91103a3c");
+    const outputDiv = document.getElementById("altair-viz-71ac4d488cb348189d84290f7e32b4ff");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
