update text and presentation of totals.

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -35,8 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> Total Deaths: <span style=\"color:red\">6</span> </h1>\n",
-    "<h1>Total Confirmed: <span style=\"color:red\">1125</span></h1>"
+    "<h1>Total Confirmed: <span style=\"color:red\">1125</span> &nbsp; Total Deaths: <span style=\"color:red\">6</span> &nbsp; Total Recovered: <span style=\"color:green\">5</span></h1>"
    ]
   },
   {
@@ -50,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Important: **Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages. See the visualizations below.** "
+    "> Important: **Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages.** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +169,7 @@
        "22  2020-03-23      ie   1125       6          5             19"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +232,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,17 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-dacd337648ff444e8949d94eac671238\"></div>\n",
+       "<div id=\"altair-viz-91fbfd0a25774b639ec5eae6a757116a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-dacd337648ff444e8949d94eac671238\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-91fbfd0a25774b639ec5eae6a757116a\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -385,7 +384,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,17 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8f9964b4d25b4f2cb3fac0f49aabeda5\"></div>\n",
+       "<div id=\"altair-viz-0fe65ab6d4ef40d7a40fb2d6c877fff7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-8f9964b4d25b4f2cb3fac0f49aabeda5\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-0fe65ab6d4ef40d7a40fb2d6c877fff7\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -466,7 +465,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,17 +495,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-50ff755143f14dcb99a54420ed979460\"></div>\n",
+       "<div id=\"altair-viz-57d0d943eda542bc9f8c15640f337abc\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-50ff755143f14dcb99a54420ed979460\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-57d0d943eda542bc9f8c15640f337abc\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -554,7 +553,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,17 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-81767131489b4d66a99b80a8bc6ee490\"></div>\n",
+       "<div id=\"altair-viz-164d670170db48af8ce2e7d294fdf31b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-81767131489b4d66a99b80a8bc6ee490\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-164d670170db48af8ce2e7d294fdf31b\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -652,7 +651,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +669,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Number of Covid-19 cases per 1M population\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "# Number of Covid-19 cases per million"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Number of Covid-19 cases per million\n",
     "The respective population of Ireland, Italy, and Spain is as follows (in millions) [\\[source\\]](https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population):\n",
     "\n",
     "- **Ireland** : 4.9M\n",
@@ -684,17 +700,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-54a1ab63322a444582f601702775afa8\"></div>\n",
+       "<div id=\"altair-viz-5f314bcdf0bd4c2db3c130761530e447\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-54a1ab63322a444582f601702775afa8\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-5f314bcdf0bd4c2db3c130761530e447\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -742,7 +758,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,17 +781,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e51fb6f186ab4e12bc1b38265ef78068\"></div>\n",
+       "<div id=\"altair-viz-f963310428584ca0a7f4ed537c0249d7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-e51fb6f186ab4e12bc1b38265ef78068\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-f963310428584ca0a7f4ed537c0249d7\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -823,7 +839,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,17 +867,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4d173df777be4eb4a6d7761f66147248\"></div>\n",
+       "<div id=\"altair-viz-9a761c91ee1844e69d262a23d9c676e4\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-4d173df777be4eb4a6d7761f66147248\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-9a761c91ee1844e69d262a23d9c676e4\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -909,7 +925,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,17 +953,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-71ac4d488cb348189d84290f7e32b4ff\"></div>\n",
+       "<div id=\"altair-viz-f98566a5b89d4b42851998d1af4a394a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-71ac4d488cb348189d84290f7e32b4ff\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-f98566a5b89d4b42851998d1af4a394a\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -995,7 +1011,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,13 +1036,6 @@
     "- Government of Ireland [https://www.gov.ie/en/news/7e0924-latest-updates-on-covid-19-coronavirus/]\n",
     "- 2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [https://github.com/CSSEGISandData/COVID-19]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
