--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -47,8 +47,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1> Total Deaths: <span style="color:red">6</span> </h1>
-<h1>Total Confirmed: <span style="color:red">1125</span></h1>
+<h1>Total Confirmed: <span style="color:red">1125</span> &nbsp; Total Deaths: <span style="color:red">6</span> &nbsp; Total Recovered: <span style="color:green">5</span></h1>
 </div>
 </div>
 </div>
@@ -61,7 +60,7 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>{% include important.html content='<strong>Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages. See the visualizations below.</strong> ' %}</p>
+<p>{% include important.html content='<strong>Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages.</strong> ' %}</p>
 
 </div>
 </div>
@@ -87,10 +86,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-81767131489b4d66a99b80a8bc6ee490"></div>
+<div id="altair-viz-164d670170db48af8ce2e7d294fdf31b"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-81767131489b4d66a99b80a8bc6ee490");
+    const outputDiv = document.getElementById("altair-viz-164d670170db48af8ce2e7d294fdf31b");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -145,7 +144,14 @@ layout: notebook
 
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Number-of-Covid-19-cases-per-1M-population">Number of Covid-19 cases per 1M population<a class="anchor-link" href="#Number-of-Covid-19-cases-per-1M-population"> </a></h1><p>The respective population of Ireland, Italy, and Spain is as follows (in millions) <a href="https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population">[source]</a>:</p>
+<hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Number-of-Covid-19-cases-per-million">Number of Covid-19 cases per million<a class="anchor-link" href="#Number-of-Covid-19-cases-per-million"> </a></h1><p>The respective population of Ireland, Italy, and Spain is as follows (in millions) <a href="https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population">[source]</a>:</p>
 <ul>
 <li><strong>Ireland</strong> : 4.9M</li>
 <li><strong>Italy</strong> : 60.2M</li>
@@ -168,10 +174,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-71ac4d488cb348189d84290f7e32b4ff"></div>
+<div id="altair-viz-f98566a5b89d4b42851998d1af4a394a"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-71ac4d488cb348189d84290f7e32b4ff");
+    const outputDiv = document.getElementById("altair-viz-f98566a5b89d4b42851998d1af4a394a");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
