update text and presentation of totals.

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -35,7 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Total Confirmed: <span style=\"color:red\">1125</span> &nbsp; Total Deaths: <span style=\"color:red\">6</span> &nbsp; Total Recovered: <span style=\"color:green\">5</span></h1>"
+    "<h1>Total Confirmed: <span style=\"color:red\">1125</span></h1>\n",
+    "<h1>Total Deaths: <span style=\"color:red\">6</span></h1> \n",
+    "<h1>Total Recovered: <span style=\"color:green\">5</span></h1>"
    ]
   },
   {
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +171,7 @@
        "22  2020-03-23      ie   1125       6          5             19"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +234,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,17 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-91fbfd0a25774b639ec5eae6a757116a\"></div>\n",
+       "<div id=\"altair-viz-ba5b963c6f894bd1be644cab83181de2\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-91fbfd0a25774b639ec5eae6a757116a\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-ba5b963c6f894bd1be644cab83181de2\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -384,7 +386,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,17 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0fe65ab6d4ef40d7a40fb2d6c877fff7\"></div>\n",
+       "<div id=\"altair-viz-165d7bbb6a0e468d928c40fc134394d3\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-0fe65ab6d4ef40d7a40fb2d6c877fff7\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-165d7bbb6a0e468d928c40fc134394d3\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -465,7 +467,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,17 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-57d0d943eda542bc9f8c15640f337abc\"></div>\n",
+       "<div id=\"altair-viz-0f616e2405cb4cb1b52021801f427bcf\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-57d0d943eda542bc9f8c15640f337abc\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-0f616e2405cb4cb1b52021801f427bcf\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -553,7 +555,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,17 +595,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-164d670170db48af8ce2e7d294fdf31b\"></div>\n",
+       "<div id=\"altair-viz-843d8e8c332b4fa7aa6867d13109f5b2\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-164d670170db48af8ce2e7d294fdf31b\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-843d8e8c332b4fa7aa6867d13109f5b2\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -651,7 +653,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,17 +702,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-5f314bcdf0bd4c2db3c130761530e447\"></div>\n",
+       "<div id=\"altair-viz-2de221492fc44764afe79f03a9aa21ba\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-5f314bcdf0bd4c2db3c130761530e447\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-2de221492fc44764afe79f03a9aa21ba\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -758,7 +760,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,17 +783,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-f963310428584ca0a7f4ed537c0249d7\"></div>\n",
+       "<div id=\"altair-viz-3fe3c70ddd414880b6cf7846039f60af\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-f963310428584ca0a7f4ed537c0249d7\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-3fe3c70ddd414880b6cf7846039f60af\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -839,7 +841,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,17 +869,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9a761c91ee1844e69d262a23d9c676e4\"></div>\n",
+       "<div id=\"altair-viz-6b3ec45918d646e6ad76365245a395b1\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-9a761c91ee1844e69d262a23d9c676e4\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-6b3ec45918d646e6ad76365245a395b1\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -925,7 +927,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,17 +955,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-f98566a5b89d4b42851998d1af4a394a\"></div>\n",
+       "<div id=\"altair-viz-18b6dc9825ae47738270c41aa84010a5\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-f98566a5b89d4b42851998d1af4a394a\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-18b6dc9825ae47738270c41aa84010a5\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -1011,7 +1013,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
